--- a/kce01.html
+++ b/kce01.html
@@ -126,16 +126,15 @@ function setContract() {
 function changecontract() {
     
     var changecontract = document.getElementById('change_contract').value;
-
-
     contractAddress = changecontract;
     startApp();
 }
 
 
 function contractHistory() {
-    getlink(contractAddress);
-    web3.eth.getTransaction()
+
+    console.log("안녕");
+   // web3.eth.getTransaction()
 }
 
 </script>
