--- a/voteContract.html
+++ b/voteContract.html
@@ -12,9 +12,8 @@
         var contractAddress = '0x22231c967eb25ed04cb38a95c7cbf51a6167d6ea';
         var abi =[{"constant":true,"inputs":[{"name":"cand","type":"string"}],"name":"getScore","outputs":[{"name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[],"name":"alreadyVoted","outputs":[{"name":"","type":"bool"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[],"name":"killContract","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[{"name":"number","type":"uint8"}],"name":"getCandidateString","outputs":[{"name":"","type":"string"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"cand","type":"string"}],"name":"addCandidate","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[],"name":"getNumOfCandidates","outputs":[{"name":"","type":"uint8"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"name":"cand","type":"string"}],"name":"vote","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"inputs":[],"payable":false,"stateMutability":"nonpayable","type":"constructor"}];
         var vc = web3.eth.contract(abi).at(contractAddress);
-        var accountId;
         web3.eth.getAccounts(function(e,r){
-            accountId = r[0];
+            document.getElementById("account").innerHTML = r[0];
             console.log(r[0]);
         });
 
@@ -70,8 +69,7 @@
     <body>
         <hl>블록체인 투표</hl>
             <div>
-                내 계정: <input type="text" id="account" value =  web3.eth.getAccounts(function(e,r){
-                    document.getElementById('account').innerHTML = r[0];}); >
+                내 계정: <span id="account"></span>
                 패스워드: <input type = "password" id="pass" value="1234">
             </div><br>
 
