--- a/voteContract.html
+++ b/voteContract.html
@@ -69,7 +69,7 @@
     <body>
         <hl>블록체인 투표</hl>
             <div>
-                내 계정: <input type = "text" id="account" value="0xc5983e664353679b9b7178c6977128444fcd7d9e">
+                계정: <input type = "text" id="account" value="0xc5983e664353679b9b7178c6977128444fcd7d9e">
                 패스워드: <input type = "password" id="pass" value="1234">
             </div><br>
 
@@ -78,7 +78,7 @@
                 <button onClick="addCand()">후보 추가하기</button>
                 <button onClick="getScore()">개표</button>
             </div>
-            <table id="table"/>
+            <table id="table1"/>
             <script>
                 showList();
             </script>
