--- a/slot.html
+++ b/slot.html
@@ -87,7 +87,7 @@
         <style>
             body {
                 text-align: center;
-                background-color:black;
+                background-color:white;
             }
 
             input, select {
@@ -130,7 +130,7 @@
         <p class = "login">
             ID:
             <input type="text" id="address"
-            value="zz">
+            value="0xc5983e664353679b9b7178c6977128444fcd7d9e">
 
         </p>
 
