--- a/slot.html
+++ b/slot.html
@@ -3,6 +3,7 @@
 <!Doctype html>
 <html>
     <head>
+            <title>슬롯머신 예제 </title>
         <meta charset="UTF-8">
         <script type="text/javascript" src="./lib/bignumber.min.js"></script>
         <script type="text/javascript" src="./lib/web3-light.js"></script>
@@ -31,6 +32,7 @@
 
         function startApp() {
             slotContract = web3.eth.contract(abi).at(contractAddress);
+            
         }
 
         var event = slotContract.sendResult();
@@ -41,19 +43,19 @@
                 return;
             }
 
-            var amount = web3.fromwei(result.args.amount.toNumber(),"ether");
-            document.getElementById('first').innerHTML = result.args.n1.toNumber();
-            document.getElementById('second').innerHTML = result.args.n2.toNumber();
-            document.getElementById('third').innerHTML = result.args.n3.toNumber();
+            var amount = web3.fromwei(r.args.amount.toNumber(),"ether");
+            document.getElementById('first').innerHTML = r.args.n1.toNumber();
+            document.getElementById('second').innerHTML = r.args.n2.toNumber();
+            document.getElementById('third').innerHTML = r.args.n3.toNumber();
 
-            if(result.args.win) {
+            if(r.args.win) {
                 message('축하드립니다!' + amount + 'ETHER를 얻었습니다.');
             }
             else
                 message("다음 기회를 이용해주세요.");
 
-            refreshBalance();
-        })
+            refreshBalance(function(e,r){console.log(r);});
+        });
 
 
         function message($mes) {
@@ -63,18 +65,24 @@
         function refreshBalance() {
             var address = document.getElementById('address').value;
             document.getElementById('balance').innerText =
-            web3.fromwei(web3.eth.getBalance(address).toNumber(),"ether")+"ETHER";
+            web3.fromwei(web3.eth.getBalance(address,function(e,r){
+                document.getElementById('balance').innerText = r.toNumber();
+            }).toNumber(),"ether")+"ETHER";
         }
 
         function spin(){
-            var address = document.getElementById('address').value;
+            var address1 = document.getElementById('address').value;
             var amount = web3.toWei(document.getElementById('bet_amount').value,"ether");
-            web3.eth.defaultAccount = address;
+            web3.eth.defaultAccount = address1;
+       
 
-            slotContract.bet({value:amount, gas:2000000}, function(e,r){
+            console.log("주소:" + address1 + "\n amount:" + amount + "\n 내 돈" );
+
+            slotContract.bet({ value: amount, gas: 2000000 } , function(e,r){
 
                 if(!e) {
                     message('결과를 기다리는 중입니다.');
+
                 }
                 else
                     message(e);
@@ -139,10 +147,10 @@
                 <rect x="0" y="10" width="500" heigh"500" fill="black"
                 stroke="white" stroke-width="10">
                 </rect>
-                <rect x="550" y="0" width="500" heigh"500" fill="black"
+                <rect x="550" y="10" width="500" heigh"500" fill="black"
                 stroke="white" stroke-width="10">
                 </rect>
-                <rect x="1100" y="0" width="500" heigh"500" fill="black"
+                <rect x="1100" y="10" width="500" heigh"500" fill="black"
                 stroke="white" stroke-width="10">
                 </rect>
 
