--- a/Coin+Grade.html
+++ b/Coin+Grade.html
@@ -18,7 +18,7 @@
         <table border="3">
                 <tr>
                         <td>index</td>
-                        <td>등급명</td>
+                        <td>등급명P</td>
                         <td>최소거래 횟수</td>
                         <td>최저거래 금액</td>
                         <td>캐시백 비율</td>
