--- a/IPFS_file.html
+++ b/IPFS_file.html
@@ -3,7 +3,7 @@
   <head>
     <title>JavaScript file upload</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <script src="https://wzrd.in/standalone/buffer"></script>
+    <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/ddb27f8d/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
     <script src="https://unpkg.com/ipfs-api@9.0.0/dist/index.js"
     integrity="sha384-5bXRcW9kyxxnSMbOoHzraqa7Z0PQWIao+cgeg327zit1hz5LZCEbIMx/LWKPReuB"
     crossorigin="anonymous"></script>
@@ -13,13 +13,14 @@
       const reader = new FileReader();
       reader.onloadend = function() {
         const ipfs = window.IpfsApi('localhost', 5001) // Connect to IPFS
-        const buf = buffer.Buffer(reader.result) // Convert data into buffer
+        const buf = ethereumjs.Buffer.Buffer(reader.result) // Convert data into buffer
         ipfs.files.add(buf, (err, result) => { // Upload buffer to IPFS
           if(err) {
             console.error(err)
             return
           }
-          let url = `https://ipfs.io/ipfs/${result[0].hash}`
+          //let url = `https://ipfs.io/ipfs/${result[0].hash}`
+          let url = `http://localhost:8080/ipfs/${result[0].hash}`
           console.log(`Url --> ${url}`)
           document.getElementById("url").innerHTML= url
           document.getElementById("url").href= url
