--- a/부동산html/ClickProduct.html
+++ b/부동산html/ClickProduct.html
@@ -157,7 +157,7 @@
 				</section>
 				<div class="subpics" id="subPic"></div>
 				<button class="custombutom" onMouseover="this.style.color='red';" onMouseout="this.style.color='black';" onclick="BuyRequest()">
-					구매하기
+					구매요청
 				</button>
 	
 				
