--- a/부동산html/Main.html
+++ b/부동산html/Main.html
@@ -69,7 +69,7 @@
 						<a href="#" data-theme="_bgp" >판매자</a>
 						<ul>
 							<li>
-								<a href="#" onclick="self.location='http://localhost:2001/부동산html/Setseller.html';" data-theme="_bgpd">판매자 등록</a>
+								<a href="#" onclick="self.location='http://localhost:2001/부동산html/RegisterSeller.html';" data-theme="_bgpd">판매자 등록</a>
 							</li>
 							<li>
 								<a href="#" onclick="self.location='http://localhost:2001/부동산html/UploadProduct.html';" data-theme="_bgpd">매물 등록</a>
@@ -90,7 +90,7 @@
 						<a href="#" data-theme="_bgp">구매자</a>
 						<ul>
 								<li>
-									<a href="#" onclick="self.location='http://localhost:2001/부동산html/Setbuyer.html';" data-theme="_bgpd">구매자 등록</a>
+									<a href="#" onclick="self.location='http://localhost:2001/부동산html/RegisterBuyer.html';" data-theme="_bgpd">구매자 등록</a>
                 </li>
                 <li>
 									<a href="#" onclick="self.location='http://localhost:2001/부동산html/BuyerCreateContract.html';" data-theme="_bgpd">계약 관리</a>
