--- a/부동산html/RegisterBuyer.html
+++ b/부동산html/RegisterBuyer.html
@@ -220,7 +220,7 @@ var RealEstateTransactionContract = web3.eth.contract([{"constant":false,"inputs
 		return '<a target="_blank" href=https://testnet.etherscan.io/address/' + addr + '>' + addr + '</a>';
 	}
 
-	function OnclickRegisterSeller() {
+	function OnclickRegisterBuyer() {
     //블록체인에 업로드
 
     var BuyerName = document.getElementById("SetBuyerName").value;
