--- a/부동산html/ClickProduct.html
+++ b/부동산html/ClickProduct.html
@@ -49,11 +49,15 @@
 					<li>
 						<a href="#" data-theme="_bgp">마이페이지 </a>
 						<ul>
+								<li>
+										<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.26:2001/부동산html/FavoriteProducts.html';">찜 목록</a>
+									</li>
+
 							<li>
-								<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.77:7001/newnewnew/MyDocument.html';">내 서류</a>
+								<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.26:2001/부동산html/MyDocument.html';">내 서류</a>
 							</li>
 							<li>
-								<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.77:7001/newnewnew/UploadDocument.html';">서류 등록</a>
+								<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.26:2001/부동산html/UploadDocument.html';">서류 등록</a>
 							</li>
 
 							<li>
@@ -65,10 +69,10 @@
 						<a href="#" data-theme="_bgp">판매자</a>
 						<ul>
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/UploadProduct.html';" data-theme="_bgpd">매물 등록</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/부동산html/UploadProduct.html';" data-theme="_bgpd">매물 등록</a>
 							</li>
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/UpdateProduct.html';" data-theme="_bgpd">매물 변경</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/부동산html/UpdateProduct.html';" data-theme="_bgpd">매물 변경</a>
 							</li>
 							<li>
 								<a href="#" data-theme="_bgpd">내 매물</a>
