--- a/client0709_1412/newnewnew/ClickMyDocument.html
+++ b/client0709_1412/newnewnew/ClickMyDocument.html
@@ -43,20 +43,20 @@
 
 				<ul class="AP_Menu_List">
 					<li>
-						<a href="#" class="Homebtn" style="background-image: url(assets/css/Home.png);background-repeat: no-repeat; background-size: contain; 	background-position: center;" onclick="self.location='http://192.168.0.77:7001/newnewnew/Main.html';"></a>
+						<a href="#" class="Homebtn" style="background-image: url(assets/css/Home.png);background-repeat: no-repeat; background-size: contain; 	background-position: center;" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/Main.html';"></a>
 					</li>
 					<li>
 							<a href="#" data-theme="_bgp">마이페이지 </a>
 							<ul>
 									<li>
-										<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.77:7001/newnewnew/FavoriteProducts.html';">찜 목록</a>
+										<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/FavoriteProducts.html';">찜 목록</a>
 									</li>
 									
 									<li>
-										<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.77:7001/newnewnew/MyDocument.html';" >내 서류</a>
+										<a href="#" data-theme="_bgpd" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/MyDocument.html';" >내 서류</a>
 									</li>
 									<li>
-										<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.77:7001/newnewnew/UpdateDocument.html';">내 서류 변경</a>
+										<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/UpdateDocument.html';">내 서류 변경</a>
 									</li>
 									<li>
 										<a href="#" data-theme="_bgpd" >내 서류 열람 허가</a>
@@ -69,17 +69,17 @@
 						<a href="#" data-theme="_bgp" >판매자</a>
 						<ul>
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/RegisterSeller.html';" data-theme="_bgpd">판매자 등록</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/RegisterSeller.html';" data-theme="_bgpd">판매자 등록</a>
 							</li>
 							<li>
-								<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.77:7001/newnewnew/UploadDocument.html';">서류 등록</a>
+								<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/UploadDocument.html';">서류 등록</a>
 							</li>
 
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/UploadProduct.html';" data-theme="_bgpd">매물 등록</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/UploadProduct.html';" data-theme="_bgpd">매물 등록</a>
 							</li>
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/UpdateProduct.html';" data-theme="_bgpd">매물 변경</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/UpdateProduct.html';" data-theme="_bgpd">매물 변경</a>
 							</li>
 							<li>
 								<a href="#" data-theme="_bgpd">내 매물</a>
@@ -91,10 +91,10 @@
 						<a href="#" data-theme="_bgp">구매자</a>
 						<ul>
 							<li>
-								<a href="#" onclick="self.location='http://192.168.0.77:7001/newnewnew/RegisterBuyer.html';" data-theme="_bgpd">구매자 등록</a>
+								<a href="#" onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/RegisterBuyer.html';" data-theme="_bgpd">구매자 등록</a>
 							</li>
 							<li>
-								<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.77:7001/newnewnew/UploadDocument.html';">서류 등록</a>
+								<a href="#" data-theme="_bgpd"  onclick="self.location='http://192.168.0.26:2001/client0709_1412/newnewnew/UploadDocument.html';">서류 등록</a>
 							</li>
 						</ul>
 					</li>
